<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cyber.accounting.movies.app.presentation.ui.activities.MovieDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/account_info_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/content_horizontal_margin"
        android:paddingTop="@dimen/content_vertical_margin"
        android:paddingRight="@dimen/content_horizontal_margin"
        android:paddingBottom="@dimen/content_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <LinearLayout
            android:id="@+id/email_account_info_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_150dp">

                <com.cyber.accounting.movies.app.presentation.ui.custom.RoundedImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_movie" />

                <TextView
                    android:id="@+id/vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/dimens_10dp"
                    android:layout_marginTop="@dimen/dimens_3dp"
                    android:layout_marginEnd="@dimen/dimens_3dp"
                    android:layout_marginBottom="@dimen/dimens_10dp"
                    android:paddingStart="@dimen/dimens_3dp"
                    android:paddingEnd="@dimen/dimens_3dp"
                    android:text="Votes 15"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_text_size" />

                <RatingBar
                    android:id="@+id/vote_average"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/dimens_3dp"
                    android:layout_marginTop="@dimen/dimens_3dp"
                    android:layout_marginBottom="@dimen/dimens_10dp"
                    android:layout_marginEnd="@dimen/dimens_10dp"
                    android:paddingStart="@dimen/dimens_3dp"
                    android:paddingEnd="@dimen/dimens_3dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/normal_text_size" />
            </RelativeLayout>

            <TextView
                android:id="@+id/lblHomePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/str_homepage"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_home_page"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:paddingTop="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/btn_view_home_page"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:background="@drawable/rounded_more_button_selector"
                    android:gravity="center"
                    android:paddingTop="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:text="Vist"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/margin_medium">

                <TextView
                    android:id="@+id/lblStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/text_padding"
                    android:text="@string/str_status"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_text_view"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/lblReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/text_padding"
                    android:paddingEnd="@dimen/text_padding"
                    android:text="@string/str_release_date"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_text_view"
                    android:paddingTop="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:text="Date"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/margin_medium">

                <TextView
                    android:id="@+id/lbl_original_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_original_language"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:layout_marginEnd="@dimen/dimens_3dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_original_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_text_view"
                    android:paddingTop="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/margin_medium">

                <TextView
                    android:id="@+id/lbl_production_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_production_company"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:layout_marginEnd="@dimen/dimens_3dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_production_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_text_view"
                    android:paddingTop="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:text="Date"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/margin_medium">

                <TextView
                    android:id="@+id/lbl_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/text_padding"
                    android:text="@string/str_budget"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:layout_marginEnd="@dimen/dimens_3dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_budget"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_text_view"
                    android:paddingTop="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:text="Date"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/str_overview"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_text_view"
                android:paddingTop="@dimen/text_padding"
                android:paddingBottom="@dimen/text_padding"
                android:textAlignment="textStart"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
